--- a/index.html
+++ b/index.html
@@ -79,4 +79,188 @@
       {"ivr_code":1801289,"store_name":"三峽北大","place_id":"ChIJbbM7SgocaDQR56insh14W9g","url":"https://maps.app.goo.gl/tcCC5otUogn2wFtL7"},
       {"ivr_code":1801450,"store_name":"萬華桂林","place_id":"ChIJQyNLlGmpQjQR60fbB_Bhd7Y","url":"https://maps.app.goo.gl/EHmJrvux4jww4tg86"},
       {"ivr_code":1801427,"store_name":"鶯歌建國","place_id":"ChIJuVRuK6oeaDQR2M9xKVekZiw","url":"https://maps.app.goo.gl/aNuaQ1aV3eBGbm8z9"},
-      {"ivr_code":1801390,"store_name":"三重中正北","place_id":"ChIJCzEu7MKoQjQR-UIHew7bL6M","url":"https://maps.app.goo.gl/Q
+      {"ivr_code":1801390,"store_name":"三重中正北","place_id":"ChIJCzEu7MKoQjQR-UIHew7bL6M","url":"https://maps.app.goo.gl/Qh3BijenmrfMsU7B9"},
+      {"ivr_code":1801532,"store_name":"木柵木新","place_id":"ChIJmZ7Tb6cBaDQR2MaGr_3a-nM","url":"https://maps.app.goo.gl/MefVfJ3D1vgU8cGB9"},
+      {"ivr_code":1801507,"store_name":"新莊幸福","place_id":"ChIJD9KGnn6oQjQRLuuXN6448r0","url":"https://maps.app.goo.gl/xrgsruPEVrNn5ppQA"},
+      {"ivr_code":1801239,"store_name":"土城金城","place_id":"ChIJfV6yXicDaDQRNPILhbacyxU","url":"https://maps.app.goo.gl/ySthwm2jce32pFEV7"},
+      {"ivr_code":1801100,"store_name":"中和員山","place_id":"ChIJU8aAIIMCaDQRD3gfzGHnp28","url":"https://maps.app.goo.gl/KP8sytfG5YStsNeh8"},
+      {"ivr_code":1801307,"store_name":"新莊中港","place_id":"ChIJJYqbx8WpQjQRrJ3EYR0_Vms","url":"https://maps.app.goo.gl/MAPvpQepENbDS74N9"},
+      {"ivr_code":1808101,"store_name":"五股新城","place_id":"ChIJMQMJk82pQjQR-uqeUYn-CFw","url":"https://maps.app.goo.gl/rPTCtS36e1FujCoc7"},
+      {"ivr_code":1801115,"store_name":"蘆洲長安","place_id":"ChIJI-ogO7qoQjQRrPqI-_OsOS4","url":"https://maps.app.goo.gl/vNX1yX87ebkAPuxw8"},
+      {"ivr_code":1801503,"store_name":"五股成泰","place_id":"ChIJR9i4eRmmQjQR9MoB4IyYMKw","url":"https://maps.app.goo.gl/kxHvkEYwfyobMwJQ9"},
+      {"ivr_code":1801524,"store_name":"七堵明德","place_id":"ChIJVx7HCB9SXTQR8dHa3H082_U","url":"https://maps.app.goo.gl/sz32fFLnZLvSeaGm7"},
+      {"ivr_code":1801534,"store_name":"基隆聖心","place_id":"ChIJ-Z6T2qJPXTQRw7AEIJAfA7o","url":"https://maps.app.goo.gl/GvoTW6PJ8BSnCWcWA"},
+      {"ivr_code":1801514,"store_name":"羅東中正","place_id":"ChIJ1f6eTG3nZzQR-luuEYNn0qg","url":"https://maps.app.goo.gl/LkV6RY3nvTd7wNGJ9"},
+      {"ivr_code":1801497,"store_name":"羅東興東二","place_id":"ChIJLZnIVCrnZzQROpaV_HW9oBI","url":"https://maps.app.goo.gl/95XyShw6MRwBnwTm7"},
+      {"ivr_code":1801469,"store_name":"板橋篤行","place_id":"ChIJD7JCnzwdaDQRQUJo_eaitf0","url":"https://maps.app.goo.gl/vB26JhrVrNdkhses8"},
+      {"ivr_code":1801512,"store_name":"三重三民二","place_id":"ChIJXcrPmXKpQjQR9LOW0nmT3vw","url":"https://maps.app.goo.gl/PqjBYCu99S6TtoXcA"},
+      {"ivr_code":1801537,"store_name":"樹林育英","place_id":"ChIJ2wNQwpsdaDQRY6jhDgo6LfA","url":"https://maps.app.goo.gl/KYtpcoz9kRiCs3CQ6"},
+      {"ivr_code":1801485,"store_name":"林口麗林","place_id":"ChIJ_54NEAWnQjQRK0CNc8e1Iu8","url":"https://maps.app.goo.gl/fA2ErdDFAKbNr3vM6"},
+      {"ivr_code":1801379,"store_name":"宜蘭頭城","place_id":"ChIJPab-WEL3ZzQRbX4daKxUlEo","url":"https://maps.app.goo.gl/ZekMzq6iyEdxywKH7"},
+      {"ivr_code":1808171,"store_name":"花蓮中山","place_id":"ChIJ8buLA-WfaDQRMHgRV8PI-HU","url":"https://maps.app.goo.gl/xN5CQquAjwQDXSpu7"},
+      {"ivr_code":1801536,"store_name":"宜蘭礁溪","place_id":"ChIJb8bKWUn6ZzQRuBaQNPkPoJ4","url":"https://maps.app.goo.gl/C5kwo8CuJCtSviTn8"},
+      {"ivr_code":1801531,"store_name":"泰山明志二","place_id":"ChIJ4datG8ynQjQRKtjmPHEmXK0","url":"https://maps.app.goo.gl/DRmQ7WaWzCgKt5pT9"},
+      {"ivr_code":1801431,"store_name":"吉安中華","place_id":"ChIJATXRpJ2faDQRqZXOmWc5DT8","url":"https://maps.app.goo.gl/jiXjKkhJfhxs8NQR8"},
+      {"ivr_code":1801343,"store_name":"蘇澳中山","place_id":"ChIJiY1QEDfoZzQRRr2u9WzB0mA","url":"https://maps.app.goo.gl/R4SRsXaj3BqLUKGS8"},
+      {"ivr_code":1801172,"store_name":"鶯歌南昌","place_id":"ChIJxSinw6seaDQRMB2pr6MSqcY","url":"https://maps.app.goo.gl/Ti32VSe8NRbXqJG89"},
+      {"ivr_code":1801433,"store_name":"林口文化二","place_id":"ChIJF3kMoQmnQjQR9x7OgYIxyOs","url":"https://maps.app.goo.gl/AbM4GF4Gbf4cVBxX9"},
+      {"ivr_code":1801493,"store_name":"中和泰和","place_id":"ChIJGQ66XxblZzQRgX7M5xFfAck","url":"https://maps.app.goo.gl/zLTQj7dozh9Cbvds6"},
+      {"ivr_code":1801454,"store_name":"宜蘭員山","place_id":"ChIJ0X33weLlZzQRxmDrU3qz49I","url":"https://maps.app.goo.gl/SMcGi8rZiAcGQg326"},
+      {"ivr_code":1801317,"store_name":"樹林樹新","place_id":"ChIJrdFwoXkdaDQRBYU_p7sG2-A","url":"https://maps.app.goo.gl/N23VTrTuZdTf3x3g8"},
+      {"ivr_code":1801336,"store_name":"三峽文化","place_id":"ChIJqUmvzvIbaDQR9lOqJNfY4Wo","url":"https://maps.app.goo.gl/n4DvASz2Kfe7NGQ38"},
+      {"ivr_code":1805116,"store_name":"基隆深溪","place_id":"ChIJrYVcXaNPXTQRQ96qktRUmf8","url":"https://maps.app.goo.gl/3ZbmPixbhEdXM77u6"},
+      {"ivr_code":1808199,"store_name":"花蓮玉里","place_id":"ChIJh-eIRHlqbzQRKbGVAkTVack","url":"https://maps.app.goo.gl/7dUeYhtHHfYzyTev7"},
+      {"ivr_code":1801398,"store_name":"蘆洲民族三","place_id":"ChIJ7VJ1bL6pQjQRU4_aX-nDOVY","url":"https://maps.app.goo.gl/Vwq8Pyfo1SPCALg78"},
+      {"ivr_code":1801366,"store_name":"三峽光明","place_id":"ChIJQZXasO0baDQRWDUcv06TPoc","url":"https://maps.app.goo.gl/u1v3HR3N2hVRaUyBA"},
+      {"ivr_code":1807037,"store_name":"桃園鶯桃","place_id":"ChIJRzd4nSIfaDQRKwcbAJHQeeI","url":"https://maps.app.goo.gl/rfH6pNadmMdim1tS9"},
+      {"ivr_code":1807038,"store_name":"台南東寧二","place_id":"ChIJZ9MJmJZ2bjQRsiUezfl1sYs","url":"https://maps.app.goo.gl/QCXhWAKAfM8tLaBM8"},
+      {"ivr_code":1807023,"store_name":"中和景平","place_id":"ChIJY5ZLIncCaDQREKpdNW2XxHs","url":"https://maps.app.goo.gl/jGapmovvzm3p95mj7"},
+      {"ivr_code":1807014,"store_name":"永康中北","place_id":"ChIJwxM2lc5wbjQRqAfbhaI-pW4","url":"https://maps.app.goo.gl/kUu7xJ4K6k2W9Pws5"},
+      {"ivr_code":1807001,"store_name":"嘉義義竹","place_id":"ChIJrW18EPiDbjQRCZKgI3-WTlY","url":"https://maps.app.goo.gl/vq8SDHVcCqp2NBsQ8"},
+      {"ivr_code":1807005,"store_name":"學甲中正","place_id":"ChIJJRhAmhl_bjQRXhE_BUwKCpU","url":"https://maps.app.goo.gl/aKuYyDgAmi4wKN1K9"},
+      {"ivr_code":1807006,"store_name":"白河康樂","place_id":"ChIJyS8p4aGPbjQRfuYVencnIj4","url":"https://maps.app.goo.gl/337UtuxwggskPdJ28"},
+      {"ivr_code":1807008,"store_name":"關廟中山","place_id":"ChIJUdPL_PNxbjQR7mzrSWX-DbU","url":"https://maps.app.goo.gl/YBN2SFrqkiKVG1jL9"},
+      {"ivr_code":1807011,"store_name":"苗栗公館","place_id":"ChIJoRcKBF6raTQRIg9HzR2gSq4","url":"https://maps.app.goo.gl/ZRUUSDY7TuPYtTUs7"},
+      {"ivr_code":1807016,"store_name":"台南西港","place_id":"ChIJaXNlch95bjQR3onXGofN_zw","url":"https://maps.app.goo.gl/utY1kEWjb23DuV6t5"},
+      {"ivr_code":1807018,"store_name":"屏東大連","place_id":"ChIJF3lzwr8XbjQRDydstfdqHH4","url":"https://maps.app.goo.gl/j7TXZsCVzhgqawTG7"},
+      {"ivr_code":1807024,"store_name":"屏東廣東二","place_id":"ChIJ149vFwsXbjQR7gp22c1cjAw","url":"https://maps.app.goo.gl/R95QKbYb7ZUEjNvm6"},
+      {"ivr_code":1807030,"store_name":"鳳山南京","place_id":"ChIJ7UBB8FQbbjQRVYHJGHzU_9Y","url":"https://maps.app.goo.gl/V6qyzuFDTQG6w7Tq9"},
+      {"ivr_code":1807039,"store_name":"大溪康莊","place_id":"ChIJYUQg0W0ZaDQRAwuC0LiVGLg","url":"https://maps.app.goo.gl/aWoH9L36L29qAHab8"},
+      {"ivr_code":1807012,"store_name":"水上中山","place_id":"ChIJLYDSfiKRbjQRxn-F29U-LOM","url":"https://maps.app.goo.gl/kHCygkh2YK9r1iBu7"},
+      {"ivr_code":1807015,"store_name":"善化中正","place_id":"ChIJGSqTc_97bjQRHhiCrMKdq9Q","url":"https://maps.app.goo.gl/jxt3ha3QJU9oRcR26"},
+      {"ivr_code":1807021,"store_name":"屏東萬丹","place_id":"ChIJj0kjb2QZbjQReCqH73O4Bvg","url":"https://maps.app.goo.gl/PnSHV3Li8eGMcDgF8"},
+      {"ivr_code":1807027,"store_name":"金山中山二","place_id":"ChIJ_Wu7BahMXTQRP0ow_mJY0Vk","url":"https://maps.app.goo.gl/DFM9n8iiuKJyWnks7"},
+      {"ivr_code":1807029,"store_name":"仁德中正","place_id":"ChIJW05cPvZzbjQRwqi8UJgY9jo","url":"https://maps.app.goo.gl/bsfixqZ46K8vS1TP8"},
+      {"ivr_code":1807042,"store_name":"蘆洲集賢","place_id":"ChIJnfCCYxipQjQRUmBdUBN2dEY","url":"https://maps.app.goo.gl/CvvuQ7K4umrp1EYW8"},
+      {"ivr_code":1807004,"store_name":"屏東林邊","place_id":"ChIJyRRWX4XgcTQRG1GiqpbW7Yw","url":"https://maps.app.goo.gl/GqmJHMjgLdpUQ77x5"},
+      {"ivr_code":1807022,"store_name":"屏東屏一","place_id":"ChIJUdUJbzMXbjQRHew3zikSV3g","url":"https://maps.app.goo.gl/piJJEZQCyaKRg69Y7"},
+      {"ivr_code":1807031,"store_name":"台東東海","place_id":"ChIJVfJixD25bzQRS0o6CgO-6LU","url":"https://maps.app.goo.gl/RbNtGrthi66Kp2mn8"},
+      {"ivr_code":1807036,"store_name":"台南麻豆","place_id":"ChIJkxjfPlZ_bjQRp4TGB1qke-Q","url":"https://maps.app.goo.gl/trrY8PTZy5VCmu5U8"},
+      {"ivr_code":1807017,"store_name":"屏東明治","place_id":"ChIJB8AdEaQXbjQR5_n-Q0tvV5c","url":"https://maps.app.goo.gl/K1kZi4G4ZzFNzzmg8"},
+      {"ivr_code":1807034,"store_name":"竹北三民","place_id":"ChIJfW0B1Oo2aDQRQDZeT8YVB_w","url":"https://maps.app.goo.gl/24psh4zQJobg9oUP6"},
+      {"ivr_code":1808181,"store_name":"土城裕民二","place_id":"ChIJb49eR-cDaDQRbuBXLWHkR18","url":"https://maps.app.goo.gl/rmEPvnQZD6bajJ2D7"},
+      {"ivr_code":1801198,"store_name":"板橋南雅","place_id":"ChIJZ-exwKgCaDQRXR4OJNnj7nM","url":"https://maps.app.goo.gl/QToRaPbzV6WYJyno6"},
+      {"ivr_code":1801384,"store_name":"蘆洲光華","place_id":"ChIJz-drycmoQjQR4cHpjESE02g","url":"https://maps.app.goo.gl/3PaVZP42fHqHoDXD8"},
+      {"ivr_code":1801209,"store_name":"台北深坑","place_id":"ChIJ1XHeKc6qQjQRa-bWk3l55rI","url":"https://maps.app.goo.gl/uRfusccmYRaArxoF9"},
+      {"ivr_code":1801146,"store_name":"板橋新海","place_id":"ChIJsdPPQRGoQjQR3-rMf0jF-Jo","url":"https://maps.app.goo.gl/J6MLqXSKag69GSkMA"},
+      {"ivr_code":1801179,"store_name":"板橋忠孝","place_id":"ChIJ0Z1dX6ECaDQRx8D41_bmN40","url":"https://maps.app.goo.gl/QneLXfqCuwCFBDaLA"},
+      {"ivr_code":1801385,"store_name":"新莊民安","place_id":"ChIJH-t4E_SnQjQRyf7-ZCWx2c0","url":"https://maps.app.goo.gl/uQFmMusK7Z4ye7Kp6"},
+      {"ivr_code":1801214,"store_name":"樹林中山二","place_id":"ChIJ-V-bMD4daDQR-cKp_Du-i_s","url":"https://maps.app.goo.gl/2Z3QW49ixY8y2QbH6"},
+      {"ivr_code":1803263,"store_name":"高雄茄萣","place_id":"ChIJfwuNiXN1bjQRPoCNs3zn6IY","url":"https://maps.app.goo.gl/8q3FKJ7XGY79jxqX8"},
+      {"ivr_code":1801346,"store_name":"汐止忠孝","place_id":"ChIJYwPzRG1TXTQRN0Ma6LxzY2M","url":"https://maps.app.goo.gl/Jw8N6F5NG6BFnkeD7"},
+      {"ivr_code":1803261,"store_name":"麻豆中山","place_id":"ChIJ3z7ajVZ_bjQRvxDfhcy67us","url":"https://maps.app.goo.gl/Dpayeykf5H4vN2wh7"},
+      {"ivr_code":1803100,"store_name":"嘉義興業","place_id":"ChIJMdRw7DCXbjQRkl6vb-L130U","url":"https://maps.app.goo.gl/5FAyzAPSpXDQSntY8"}
+    ];  // === 90家結束 ===
+
+    let API_KEY = localStorage.getItem('fet_key_v9') || 'AIzaSyBjCmx5gI49M1ik9K-KXBWp0Bdb9hGjHDQ';
+    localStorage.setItem('fet_key_v9', API_KEY);
+
+    const lastData = JSON.parse(localStorage.getItem('fet_reviews_v9') || '[]');
+    storeData.forEach(store => {
+      const prev = lastData.find(p => p.ivr_code === store.ivr_code);
+      store.previous = prev ? prev.review_count : 0;
+      store.review_count = store.previous || 0;
+      store.update_time = prev ? prev.update_time : '';
+    });
+
+    function renderTable() {
+      const tbody = document.querySelector('#storeTable tbody');
+      tbody.innerHTML = '';
+      storeData.forEach(store => {
+        const diff = Number(store.review_count || 0) - Number(store.previous || 0);
+        const diffText = diff > 0 ? `+${diff}` : diff === 0 ? '0' : diff;
+        tbody.innerHTML += `<tr class="${diff > 0 ? 'success' : ''}">
+          <td>${store.ivr_code}</td>
+          <td>${store.store_name}</td>
+          <td class="link"><a href="${store.url}" target="_blank">開啟地圖</a></td>
+          <td>${store.previous || 0}</td>
+          <td class="${store.review_count === '錯誤' ? 'error' : ''}">${store.review_count || 0}</td>
+          <td class="new">${diffText}</td>
+          <td>${store.update_time || '-'}</td>
+        </tr>`;
+      });
+    }
+
+    async function getReviewCount(placeId) {
+      for (let i = 0; i < 4; i++) {
+        try {
+          const url = `https://maps.googleapis.com/maps/api/place/details/json?place_id=${placeId}&fields=user_ratings_total&key=${API_KEY}&language=zh-TW®ion=tw`;
+          const res = await fetch(url, { cache: "no-store" });
+          const data = await res.json();
+          if (data.status === 'OK' && data.result && data.result.user_ratings_total !== undefined) {
+            return data.result.user_ratings_total;
+          }
+          if (data.status === 'REQUEST_DENIED') return '金鑰無效';
+          if (data.status === 'OVER_QUERY_LIMIT') await new Promise(r => setTimeout(r, 2500));
+        } catch (e) {
+          console.log('錯誤:', e);
+        }
+        await new Promise(r => setTimeout(r, 400));
+      }
+      return '錯誤';
+    }
+
+    async function updateReviews() {
+      const btn = document.querySelector('button[onclick="updateReviews()"]');
+      btn.disabled = true;
+      document.getElementById('progress').innerHTML = '🚀 火力全開更新中（90家25秒）...';
+      let success = 0;
+      for (let i = 0; i < storeData.length; i++) {
+        document.getElementById('progress').innerHTML = `更新中：${storeData[i].store_name} (${i+1}/90)`;
+        const count = await getReviewCount(storeData[i].place_id);
+        storeData[i].review_count = count;
+        storeData[i].update_time = new Date().toLocaleString('zh-TW');
+        if (typeof count === 'number') success++;
+        renderTable();
+        await new Promise(r => setTimeout(r, 400));
+      }
+      localStorage.setItem('fet_reviews_v9', JSON.stringify(storeData.map(s => ({ivr_code: s.ivr_code, review_count: s.review_count, update_time: s.update_time}))));
+      document.getElementById('progress').innerHTML = `🎉 大功告成！成功 ${success}/90 家（淡水竹圍現在 ${storeData[0].review_count} 則）`;
+      btn.disabled = false;
+    }
+
+    function downloadExcel() {
+      const data = [["IVR Code","門市名稱","Google Maps","上次","最新","新增","更新時間"], ...storeData.map(s => [s.ivr_code, s.store_name, s.url, s.previous || 0, s.review_count || 0, Number(s.review_count || 0) - Number(s.previous || 0), s.update_time || ''])];
+      const wb = XLSX.utils.book_new();
+      const ws = XLSX.utils.aoa_to_sheet(data);
+      XLSX.utils.book_append_sheet(wb, ws, "遠傳評論");
+      XLSX.writeFile(wb, `遠傳90家評論_${new Date().toISOString().slice(0,10)}.xlsx`);
+    }
+
+    function showApiKeyModal() {
+      document.getElementById('apiKeyModal').classList.add('show');
+    }
+
+    function saveApiKey() {
+      API_KEY = document.getElementById('apiKeyInput').value.trim();
+      localStorage.setItem('fet_key_v9', API_KEY);
+      alert('金鑰已儲存！');
+      document.getElementById('apiKeyModal').classList.remove('show');
+    }
+
+    function clearAllData() {
+      if (confirm('確定清除所有舊資料？（強烈建議第一次用）')) {
+        localStorage.removeItem('fet_reviews_v9');
+        localStorage.removeItem('fet_key_v9');
+        location.reload();
+      }
+    }
+
+    renderTable();
+
+    // === Modal 結構（放在 script 下面）===
+    const modalHTML = `
+      <div id="apiKeyModal">
+        <div style="position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.8);z-index:9999;display:flex;justify-content:center;align-items:center;">
+          <div style="background:white;padding:40px;border-radius:20px;width:90%;max-width:600px;text-align:center;box-shadow:0 20px 60px rgba(0,0,0,0.5);">
+            <h2>🔑 金鑰已自動填入！</h2>
+            <input type="text" id="apiKeyInput" value="${API_KEY}" style="width:100%;padding:20px;margin:20px 0;font-size:22px;border:3px solid #0066cc;border-radius:10px;text-align:center;">
+            <p style="color:green;font-size:20px;font-weight:bold;">直接按儲存 → 更新就100%成功！</p>
+            <button onclick="saveApiKey()" style="padding:15px 40px;font-size:20px;">儲存並關閉</button>
+          </div>
+        </div>
+      </div>`;
+    document.body.insertAdjacentHTML('beforeend', modalHTML);
+  </script>
+</body>
+</html>
